Add global search form and focus styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,12 @@ img {
   height: auto;
 }
 
+/* OUTLINE STYLES  */
+*:focus {
+outline: 2px dashed #7236ec;
+outline-offset: 3px;
+}
+
 /* BUTTON  */
 .button {
   display: inline-block;
@@ -110,6 +116,22 @@ img {
 }
 .currency-rite-type {
   color: #2959ce;
+}
+
+/* GLOBAL REARCH FORM  */
+
+.global-search-form {
+  margin-right: 25px;
+}
+
+.global-search-form-input {
+  padding-top: 15px;
+  padding-right: 20px;
+  padding-bottom: 13px;
+  padding-left: 40px;
+  font-size: 14px;
+  line-height: normal;
+  border: none;
 }
 
 /* LANG-TOGGLE  */
