--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ outline-offset: 3px;
   background-color:#f6f6f6;
   padding-top: 30px;
   padding-bottom: 30px;
+  margin-bottom: 10px;
 }
 .site-header-top-container {
   display: flex;
@@ -157,7 +158,49 @@ outline-offset: 3px;
   background-color: #fff;
   color: #000;
 }
-.button {
+
+/* SITE NAV  */
+
+.site-nav {
+  border-bottom: 1px solid #d1d1d1;padding-bottom: 16px;
+  padding-top: 16px;
+  margin-bottom: 40px;
+  font-size: 18px;
+  line-height: normal;
+  font-weight: 500;
 }
-.button-primary {
+.site-nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.site-nav-item {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.site-nav-item:not(:last-child) {
+  margin-right: 34px;
+}
+.site-nav-link {
+  display: block;
+  color: #7f7f7f;
+  text-decoration: none;
+}
+
+.site-nav-link:hover {
+  opacity: 0.8;
+}
+
+.site-nav-link:active {
+  opacity: 0.6;
+}
+
+/* SITE  HEADER BANNER  */
+.site-header-banner-link {
+  display: flex;
 }
