--- a/css/styles.css
+++ b/css/styles.css
@@ -71,9 +71,6 @@ outline-offset: 3px;
 
 /* SITE-HEADER  */
 
-.site-header {
-}
-
 /* SITE-HEADER-TOP  */
 
 .site-header-top {
@@ -203,4 +200,83 @@ outline-offset: 3px;
 /* SITE  HEADER BANNER  */
 .site-header-banner-link {
   display: flex;
+}
+
+/* MAIN CONTENT  */
+
+.main-content {
+  flex-grow: 1;
+  padding-top: 50px;
+}
+
+
+/* NEWS GRID  */
+
+.news-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+}
+.news-grid-item {
+  width: 393px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.article-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+  background-color: #f6f6f6;
+  padding: 20px 17px 15px;
+}
+.article-card-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 500;
+}
+.article-card-link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.article-card-link:hover {
+  color: #7296ec
+}
+
+.article-card-link:active {
+  opacity: 0.6;
+}
+
+.article-card-text {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+.article-card-img {
+  display: block;
+  width: 360px;
+  height: 165px;
+  object-fit: cover;
+  margin-top: auto;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+.artcle-card-footer {
+  display: flex;
+  align-items: center;
+}
+.article-card-source-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color: #5e5f61;
+}
+.article-card-source {
 }
