--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ outline-offset: 3px;
 .button {
   display: inline-block;
   padding: 13px 20px;
+  border: 0;
   border-radius: 10px;
   font-size: 16px;
   line-height: normal;
@@ -45,17 +46,23 @@ outline-offset: 3px;
   cursor: pointer;
 }
 
+.button:hover {
+  opacity: 0.8;
+}
+
+.button:active {
+  opacity: 0.6;
+}
+
 .button-primary {
   background-color: #7236ec;
   color: #fff;
 }
 
-.button-primary:hover {
-  opacity: 0.8;
-}
 
-.button-primary:active {
-  opacity: 0.6;
+.button-orange {
+  background-color: #f78b3b;
+  color: #fff;
 }
 
 /* CONTAINER  */
@@ -279,4 +286,21 @@ outline-offset: 3px;
   color: #5e5f61;
 }
 .article-card-source {
+}
+
+/* NOTIFIACTION CTA */
+.notification-cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 70px 25px 25px;
+  margin: 60px 75px;
+  background-color: #ffd7ba;
+  border-radius: 10px;
+}
+.notification-cta-text {
+  flex: 20;
+  font-weight: 500;
+  line-height: 26px;
+  color: #000;
 }
